<resources>
    <string name="app_name">COVID</string>
    <string name="novo_paciente">Novo paciente</string>
    <string name="alterar_paciente">Alterar paciente</string>
    <string name="eliminar_paciente">Eliminar paciente</string>
    <string name="settings">Settings</string>
    <string name="nome_paciente">Nome Paciente</string>
    <string name="numero_utente">Número Utente</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="morada">Morada</string>
    <string name="contacto">Contacto</string>
    <string name="Guardar">guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="novo_paciente_fragment_label">Novo Paciente</string>
    <string name="lista_pacientes_fragment_label">Pacientes</string>
    <string name="editar_paciente_fragment_label">Editar Paciente</string>
    <string name="eliminar_paciente_fragment_label">Eliminar Paciente ?</string>
    <string name="lista_infetados_fragment_label">Infetados</string>
    <string name="novo_infetado_fragment_label">Novo Infetado</string>
    <string name="novo_infetado">Novo infetado</string>
    <string name="alterar_infetado">Alterar Infetado</string>
    <string name="eliminar_infetado">Eliminar Infetado</string>
    <string name="data_de_infecao">Data de Infeção</string>
    <string name="sintomas">Sintomas</string>
    <string name="edita_infetado_fragment_label">Editar Infetado</string>
    <string name="elimina_infetado_fragment_label">Eliminar Infetado?</string>
    <string name="novo_vacinado">Novo Vacinado</string>
    <string name="eliminar_vacinado">Eliminar Vacinado</string>
    <string name="lista_vacinados_fragment_label">Vacinados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>