<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_novo_paciente"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/novo_paciente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_paciente"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/alterar_paciente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_paciente"
        android:title="@string/eliminar_paciente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>