<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminaPacienteFragment" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_ecran"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/nome_paciente"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewNomePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="António Simões" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/numero_utente"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewNumeroUtente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="936852741" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/data_nascimento"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="01-01-1995" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:text="@string/contacto"
        android:textColor="@color/cor_destaque" />

    <TextView
        android:id="@+id/textViewContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecran"
        android:layout_marginLeft="@dimen/margem_ecran"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_ecran"
        android:layout_marginRight="@dimen/margem_ecran"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="919876543" />
</LinearLayout>